requires explicit request for permissions on consumer key from apps.twitter.com

--- a/digits_configuration.html
+++ b/digits_configuration.html
@@ -6,5 +6,8 @@
         <li>
             Visit <a href="https://apps.twitter.com/app/new" target="_blank">https://apps.twitter.com/app/new</a>
         </li>
+        <li>
+            Ping <a href="mailto:support@fabric.io?subject=Permissions request for Fabric Digits client">support@fabric.io</a> with your Consumer Key to get the right permissions.  Note: Digits does not work with keys created from apps.twitter.com unless you use the native app via Fabric or if you request permissions by email.
+        </li>
     </ol>
 </template>
