followed the twitter model and compared cannonball.  Still needs more changes.

--- a/example/packages/accounts-fabric-digits/digits_configuration.html
+++ b/example/packages/accounts-fabric-digits/digits_configuration.html
@@ -1,13 +1,25 @@
 <template name="configureLoginServiceDialogForDigits">
     <p>
-        Follow these steps to configure your Fabric Digits client:
+        Follow these steps to configure your Twitter Fabric Digits client:
     </p>
     <ol>
         <li>
             Visit <a href="https://apps.twitter.com/app/new" target="_blank">https://apps.twitter.com/app/new</a>
         </li>
         <li>
-            Ping <a href="mailto:support@fabric.io?subject=Permissions request for Fabric Digits client">support@fabric.io</a> with your Consumer Key to get the right permissions.  Note: Digits does not work with keys created from apps.twitter.com unless you use the native app via Fabric or if you request permissions by email.
+        </li>
+        <li>
+          Select "Create your Twitter application".
+        </li>
+        <li>
+          On the Settings tab, enable "Allow this application to be used to Sign in with Twitter" and click "Update settings".
+        </li>
+        <li>
+          Switch to the "Keys and Access Tokens" tab.
+        </li>
+        <li>
+            Ping <a href="mailto:support@fabric.io?subject=Permissions request for Twitter Fabric Digits client">support@fabric.io</a> with your Consumer Key to get the right permissions.  Note: Digits does not work with keys created from apps.twitter.com unless you use the native app via Fabric or you can request permissions by email.
         </li>
     </ol>
 </template>
+Twitter 
