In the process of moving cannonball into the Twitter model.

--- a/example/accounts-fabric-digits.html
+++ b/example/accounts-fabric-digits.html
@@ -5,10 +5,10 @@
 <body>
   <h1>Welcome to Meteor!</h1>
 
-  {{> hello}}
+  {{> signin}}
   {{currentUser.profile.name}}
 </body>
 
-<template name="hello">
-  <button>Login Digits</button>
+<template name="signin">
+  <button class="digits-button btn-primary">Sign In with Phone via DIGITS</button>
 </template>
