added iron:router to follow the cannonball model.  This is an experiment to better understand the OAuth Echo flow.  There will be changes so that the package can be used without too much trouble.

--- a/example/accounts-fabric-digits.html
+++ b/example/accounts-fabric-digits.html
@@ -1,3 +1,4 @@
+<template name="accounts-fabric-digits">
 <head>
   <title>accounts-fabric-digits example</title>
 </head>
@@ -10,6 +11,7 @@
 
   {{> loginButtons}}
 </body>
+</template>
 
 <template name="signin">
   <button class="digits-button btn-primary">Sign In with Phone via DIGITS</button>
